--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pizzaria</string>
+    <string name="hint_informe_seu_login">Informe seu login</string>
+    <string name="hint_informe_sua_senha" />
+    <string name="label_conectar" />
 </resources>
