--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Pizzaria</string>
-    <string name="hint_informe_seu_login">Informe seu login</string>
-    <string name="hint_informe_sua_senha">Informe sua senha</string>
-    <string name="label_conectar" />
+    <string name="app_name" translatable="false">Pizza Shift</string>
+    <string name="hint_informe_seu_login">Type Login</string>
+    <string name="hint_informe_sua_senha">Type Password</string>
+    <string name="label_conectar" >Connect</string>
 </resources>
