--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name" translatable="false">Pizza Shift</string>
     <string name="hint_informe_seu_login">Type Login</string>
     <string name="hint_informe_sua_senha">Type Password</string>
-    <string name="label_conectar" >Connect</string>
+    <string name="label_conectar">Connect</string>
+    <string name="mensagem_campo_obrigatorio">* Campo Obrigatório</string>
+    <string name="mensagem_usuario_senha_invalido">Usuário/senha inválido</string>
 </resources>
