--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -3,4 +3,6 @@
     <string name="hint_informe_seu_login">Informe seu login</string>
     <string name="hint_informe_sua_senha">Informe sua senha</string>
     <string name="label_conectar">Conectar</string>
+    <string name="label_sobre">Sobre</string>
+    <string name="hello">Oie, %1$s</string>
 </resources>
