Criaca da tela de pedidos

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -2,7 +2,8 @@
 <resources>
     <string name="hint_informe_seu_login">Informe seu login</string>
     <string name="hint_informe_sua_senha">Informe sua senha</string>
-    <string name="label_conectar">Conectar</string>
+    <string name="label_conectar">Connect</string>
     <string name="label_sobre">Sobre</string>
     <string name="hello">Oie, %1$s</string>
+    <string name="label_dinheiro">Money</string>
 </resources>
